unpackaged/volunteersQuickStart/step1/objects/PositionQualification.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  QualificationReferenceRecordId , Qualification_Text__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Text__c</fullName>
        <description>This flow is updated is when the Qualification Reference Record is updated and populated. Its purpose is to provide visibility in List Views and Related Lists due to limitations on the polymorphic fields.</description>
        <label>Qualification Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>